<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="380dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/buttonSite"
            android:layout_width="130dp"
            android:layout_height="90dp"
            android:layout_marginStart="64dp"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@color/azul"
            android:drawableTop="@drawable/mundo"
            android:padding="20dp"
            android:text="@string/buttonSite"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/buttonLigar"
            android:layout_width="130dp"
            android:layout_height="90dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="64dp"
            android:layout_marginRight="64dp"
            android:background="@color/azul"
            android:drawableTop="@drawable/telefone"
            android:padding="20dp"
            android:text="@string/buttonLigar"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="380dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="252dp"
        android:textColor="@color/white"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonLocal"
            android:layout_width="128dp"
            android:layout_height="90dp"
            android:layout_marginStart="64dp"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/azul"
            android:drawableTop="@drawable/lugar"
            android:padding="15dp"
            android:text="@string/buttonLocal"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/buttonCompartilhar"
            android:layout_width="130dp"
            android:layout_height="90dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="64dp"
            android:layout_marginRight="64dp"
            android:layout_marginBottom="8dp"
            android:background="@color/azul"
            android:drawableTop="@drawable/compartilheee"
            android:padding="15dp"
            android:text="@string/buttonCompartilhar"
            android:textColor="@color/white" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="189dp"
        android:layout_height="170dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/magazine" />

</androidx.constraintlayout.widget.ConstraintLayout>